force-app/main/default/objects/redwing__Material_Item__c/fields/redwing__Access_Level__c.field-meta.xml
<CustomField>
    <fullName>redwing__Access_Level__c</fullName>
    <label>Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Students</fullName>
            </value>
            <value>
                <fullName>Instructors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>