force-app/main/default/objects/redwing__Material_Item__c/fields/redwing__File_External_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__File_External_Id__c</fullName>
    <label>File External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>