force-app/main/default/objects/redwing__Material_Item__c/fields/redwing__File_Size__c.field-meta.xml
<CustomField>
    <fullName>redwing__File_Size__c</fullName>
    <label>File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>