force-app/main/default/objects/redwing__Material_Item__c/fields/redwing__File_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__File_Type__c</fullName>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>