force-app/main/default/objects/redwing__Material_Item__c/fields/redwing__Library__c.field-meta.xml
<CustomField>
    <fullName>redwing__Library__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Library</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>