force-app/main/default/objects/redwing__Material_Item__c/fields/redwing__Material__c.field-meta.xml
<CustomField>
    <fullName>redwing__Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>redwing__Material__c</referenceTo>
    <relationshipLabel>Material Items</relationshipLabel>
    <relationshipName>Material_Items</relationshipName>
    <type>Lookup</type>
</CustomField>